--- a/projects/sleep-model-viz.html
+++ b/projects/sleep-model-viz.html
@@ -47,9 +47,7 @@
 							<img src="../images/sleepy.png" alt="a sleepy smiski" height="300" width="300">
 						</div>
 						<p>The whole design process and reflection has been written out below, or, for your viewing pleasure everything has been summarized in the following 3-minute long video.</p>
-						<video class="centered" width="520" height="320" controls>
-				    			<source src="../videos/PersonalDataPhysicalization.mp4" type="video/mp4"/>
-				    	</video>
+						<iframe class="centered" width="560" height="315" src="https://www.youtube.com/embed/SCMFNoTGToU?si=WrMkTkpyOxxx5UAQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 					</section>
 					<hr class="thin">
 					<section id="collection">
