--- a/projects/ransomware-viz/ransomware-viz.html
+++ b/projects/ransomware-viz/ransomware-viz.html
@@ -1,48 +1,56 @@
 <!DOCTYPE html>
 <html lang="en-CA">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Ransomware Attacks</title>
-    <link rel="stylesheet" href="main.css">
-</head>
-<body>
-    <h1>Analytics of Ransomware Attacks</h1>
-    <div class="container">
-        <div class="circlesContainer">
-            <div id="circles"></div>
-            <div class="tooltip"></div>
-            <div class="filters">
-                <div class="filter">
-                    <p>Grouping 1</p>
-                    <select id="selectionMenu1"></select>
+    <head>
+        <!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-HTPZDVK158"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+			gtag('config', 'G-HTPZDVK158');
+		</script>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Ransomware Attacks</title>
+        <link rel="stylesheet" href="main.css">
+    </head>
+    <body>
+        <h1>Analytics of Ransomware Attacks</h1>
+        <section class="container">
+            <div class="circlesContainer">
+                <div id="circles"></div>
+                <div class="tooltip"></div>
+                <div class="filters">
+                    <div class="filter">
+                        <p>Grouping 1</p>
+                        <select id="selectionMenu1"></select>
+                    </div>
+                    <div class="filter">
+                        <p>Grouping 2</p>
+                        <select id="selectionMenu2"></select>
+                    </div>
+                    <div class="filter">
+                        <p>Grouping 3</p>
+                        <select id="selectionMenu3"></select>
+                    </div>
                 </div>
-                <div class="filter">
-                    <p>Grouping 2</p>
-                    <select id="selectionMenu2"></select>
-                </div>
-                <div class="filter">
-                    <p>Grouping 3</p>
-                    <select id="selectionMenu3"></select>
+                <div class="legend">
+                    <fieldset>
+                        <legend class="legendheading">Legend</legend>
+                        <p><span class="dot"></span> size = organization</p>
+                        <p><span class="box yellow"></span> yellow = ransom paid</p> 
+                        <p><span class="box red"></span> red = ransom refused</p> 
+                        <p><span class="box grey"></span> grey = unknown paid/refused</p>
+                    </fieldset> 
                 </div>
             </div>
-            <div class="legend">
-                <fieldset>
-                    <legend class="legendheading">Legend</legend>
-                    <p><span class="dot"></span> size = organization</p>
-                    <p><span class="box yellow"></span> yellow = ransom paid</p> 
-                    <p><span class="box red"></span> red = ransom refused</p> 
-                    <p><span class="box grey"></span> grey = unknown paid/refused</p>
-                </fieldset> 
+            <div class="histogramContainer">
+                <div id="pieChart"></div>
+                <h2 class="histHeading">Ransomware Attacks Occurences</h2>
+                <div id="histogram"></div>
+                <select class="filterHisto" id="selectionMenu4"></select>
             </div>
-        </div>
-        <div class="histogramContainer">
-            <div id="pieChart"></div>
-            <h2 class="histHeading">Ransomware Attacks Occurences</h2>
-            <div id="histogram"></div>
-            <select class="filterHisto" id="selectionMenu4"></select>
-        </div>
-    </div>
-</body>
-<script type="module" src="main.js"></script>
+        </section>
+    <script type="module" src="main.js"></script>
+    </body>
 </html>
