--- a/projects/cybersecurity-ransomware.html
+++ b/projects/cybersecurity-ransomware.html
@@ -54,6 +54,7 @@
 						<img src="../images/ransomware/virus.jpg" alt="Computer virus illustration" height="205" width="480">
 						<p>This project aims to visualize the trends and common themes of ransomware attacks using data from the past decade by analyzing patterns within the data. With the rising threats of ransomware affecting individuals, businesses and government; raising awareness about the prevalence and impacts of these attacks is crucial.</p>
 						<p><a class="viz" href="ransomware-viz/ransomware-viz.html" title="ransomware project" target="_blank">Click here</a> to try the interactive visualization!</p>
+						<img src="../images/ransomware/visulization.png" alt="Computer virus illustration" height="940" width="950">
 					</section>
 					<hr class="thin">
 					<section id="collection">
