--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 				<ul>
 					<li class="project-item txt-decor light-pink-lines">
 						<a href="projects/togetracker.html" title="TogeTracker">
-							<img src="images/cat.png" alt="a sleepy cat" height="500" width="500">
+							<img src="images/groceries.png" alt="sketch of groceries" height="500" width="500">
 						</a>
 						<div class="project-hover">
 							<h3 class="robo-style">TogeTracker Grocery Assistant</h3>
@@ -75,7 +75,7 @@
 					</li>
 					<li class="project-item txt-decor light-pink-lines">
 						<a href="projects/cybersecurity-ransomware.html" title="Cybersecurity Web Threats">
-							<img src="images/cat.png" alt="a sleepy cat" height="500" width="500">
+							<img src="images/hacker.png" alt="sketch of cat hacker" height="500" width="500">
 						</a>
 						<div class="project-hover">
 							<h3 class="robo-style">Cybersecurity Ransomware Attacks</h3>
@@ -84,7 +84,7 @@
 					</li>
 					<li class="project-item light-pink-lines">
 						<a href="projects/sleep-model-viz.html" title="Sleep Model Visualization">
-							<img src="images/cat.png" alt="a sleepy cat" height="500" width="500">
+							<img src="images/mobile.png" alt="sketch of mobile" height="500" width="500">
 						</a>
 						<div class="project-hover">
 							<h3 class="robo-style">Sleep Model Visualization</h3>
