--- a/projects/cybersecurity-ransomware.html
+++ b/projects/cybersecurity-ransomware.html
@@ -29,7 +29,7 @@
 				<ul class="robo-style">
 					<li><a href="../index.html#projects" title="Projects">Projects</a></li>
 					<li><a href="../about.html" title="About Me">About</a></li>
-					<li><a href="../resume/Jiayue_Wong_Resume_UXR.pdf" target="_blank" title="Resume">Resume</a></li>
+					<li><a href="../resume/Jiayue_Wong_Resume.pdf" target="_blank" title="Resume">Resume</a></li>
 				</ul>
 			</nav>
 		</header>
@@ -50,7 +50,7 @@
 				<section class="project-page">
 					<section id="overview">
 						<h2>Overview</h2>
-						<p>It's known that ransomware attacks are becoming increasingly prevalent and sophisticated over the past decade. These attacks involve malicious software that encrypts data, rendering it inaccessible until a ransom is paid to the attackers, typically in cryptocurrency. Trends indicate a sharp rise in both the number of attacks and the ransoms demanded. Cybersecurity websites like Krebs on Security regularly report on the latest incidents and tactics used by ransomware attack groups. Research articles and journals from IEEE analyze the technical and economic impacts of these attacks. There are also government reports from agencies like the FBI that provide static visual data on ransomware trends.</p>
+						<p>It is known that ransomware attacks are becoming increasingly prevalent and sophisticated over the past decade. These attacks involve malicious software that encrypts data, rendering it inaccessible until a ransom is paid to the attackers, typically in cryptocurrency. Trends indicate a sharp rise in both the number of attacks and the ransoms demanded. Cybersecurity websites like Krebs on Security regularly report on the latest incidents and tactics used by ransomware attack groups. Research articles and journals from IEEE analyze the technical and economic impacts of these attacks. There are also government reports from agencies like the FBI that provide static visual data on ransomware trends.</p>
 						<img src="../images/ransomware/virus.jpg" alt="Computer virus illustration" height="205" width="480">
 						<p>This project aims to visualize the trends and common themes of ransomware attacks using data from the past decade by analyzing patterns within the data. With the rising threats of ransomware affecting individuals, businesses and government; raising awareness about the prevalence and impacts of these attacks is crucial.</p>
 						<p><a class="viz" href="ransomware-viz/ransomware-viz.html" title="ransomware project" target="_blank">Click here</a> to try the interactive visualization!</p>
