--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, viewport-fit=cover">
 		<meta name="description" content="Jiayue Wong Portfolio-site">
-		<title>Jiayue Wong | UXR & Data Analyst</title>
+		<title>Jiayue Wong | Portfolio</title>
 		<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 		<link id="favicon" rel="icon" type="image/svg+xml" href="images/cake-coloured.svg">
 	    <link rel="stylesheet" href="styles/reset.css">
@@ -35,21 +35,9 @@
 			<section class="intro">
 				<h1 class="robo-style">Jiayue Wong</h1>
 				<ul class="container is-flex">
-					<!-- <li>
-						<img src="images/business-fish.png" alt="fish in business suit" height="160" width="160">
-						<p class="noto-sans">An aspiring researcher with a deep passion for human-computer interaction</p>
-					</li> 
 					<li>
 						<img src="images/sleepy.png" alt="sleepy smiski" height="160" width="160">
-						<p class="noto-sans">Dedicated to understanding and improving the interactions between people and technology</p>
-					</li>
-					<li>
-						<img src="images/snake.png" alt="snake" height="160" width="160">
-						<p class="noto-sans">Belief that thoughtful decisions and designs can make life easier and more enjoyable</p>
-					</li> -->
-					<li>
-						<img src="images/sleepy.png" alt="sleepy smiski" height="160" width="160">
-						<p class="noto-sans">An aspiring researcher with a deep passion for human-computer interaction</p>
+						<p class="noto-sans">Passionate about creating innovative, user-centered products that drive meaningful impact</p>
 					</li> 
 					<li>
 						<img src="images/snake.png" alt="snake" height="160" width="160">
