--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, viewport-fit=cover">
 		<meta name="description" content="Jiayue Wong Portfolio-site">
-		<title>Jiayue Wong | UXR & Data Analyst - About</title>
+		<title>Jiayue Wong | About</title>
 		<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 		<link id="favicon" rel="icon" type="image/svg+xml" href="images/cake-coloured.svg">
 	    <link rel="stylesheet" href="styles/reset.css">
@@ -63,6 +63,7 @@
 					</div>
 				</div>
 			</section>
+			<!--
 			<section class="skills is-flex" id="skills">
 				<ul class="noto-sans">
 					<li><h3>HCI/UX Skills</h3></li>
@@ -89,6 +90,7 @@
 					<li>Figma</li>
 				</ul>
 			</section>
+			-->
 		</main>
 		<footer class="footer robo-style is-flex" id="get-in-touch">
 			<div class="contact">
