--- a/about.html
+++ b/about.html
@@ -21,11 +21,11 @@
 	<body class="cream-back">
 		<header id="header" class="header">
 			<div class="logo">
-				<a href="index.html" title="Homepage"><img src="images/cake-coloured.png" alt="Slice of shortcake" height="150" width="150"></a>
+				<a href="index.html" title="Homepage"><img src="images/cake-coloured.png" alt="Slice of shortcake" height="150" width="150"><p>Jiayue &#9829;</p></a>
 			</div> 
 			<nav class="gn">
 				<ul class="robo-style">
-					<li><a class="txt-decor" href="index.html#projects" title="Projects">Projects</a></li>
+					<li><a class="txt-decor" href="projects.html" title="Projects">Projects</a></li>
 					<li><a class="txt-decor" href="#about" title="About Me">About</a></li>
 					<li><a href="resume/Jiayue_Wong_Resume.pdf" target="_blank" title="Resume">Resume</a></li>
 				</ul>
