--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			</div> 
 			<nav class="gn">
 				<ul class="robo-style">
-					<li><a class="txt-decor" href="#projects" title="Projects">Projects</a></li>
+					<li><a class="txt-decor" href="projects.html" title="Projects">Projects</a></li>
 					<li><a class="txt-decor" href="about.html" title="About Me">About</a></li>
 					<li><a href="resume/Jiayue_Wong_Resume.pdf" target="_blank" title="Resume">Resume</a></li>
 				</ul>
@@ -53,30 +53,30 @@
 				<h2 class="robo-style">Featured Projects</h2>
 				<ul>
 					<li class="project-item txt-decor light-pink-lines">
+						<a href="projects/market-visualizer.html" title="Market Visualizer">
+							<img src="images/globe.png" alt="sketch of a globe" height="500" width="500">
+						</a>
+						<div class="project-hover">
+							<h3 class="robo-style">Marketing Visualizer</h3>
+							<p class="noto-sans">Data Physicalization: Marketing Helper</p>
+						</div>
+					</li>
+					<li class="project-item txt-decor light-pink-lines">
 						<a href="projects/togetracker.html" title="TogeTracker">
 							<img src="images/groceries.png" alt="sketch of groceries" height="500" width="500">
 						</a>
 						<div class="project-hover">
 							<h3 class="robo-style">TogeTracker Grocery Assistant</h3>
-							<p class="noto-sans">App: Food Waste Management </p>
-						</div>
-					</li>
-					<li class="project-item txt-decor light-pink-lines">
-						<a href="projects/cybersecurity-ransomware.html" title="Cybersecurity Web Threats">
-							<img src="images/hacker.png" alt="sketch of cat hacker" height="500" width="500">
-						</a>
-						<div class="project-hover">
-							<h3 class="robo-style">Cybersecurity Ransomware Attacks</h3>
-							<p class="noto-sans">Data Analysis: Visualizing Ransomware Attacks</p>
+							<p class="noto-sans">Case Study: Food Waste Management</p>
 						</div>
 					</li>
 					<li class="project-item light-pink-lines">
-						<a href="projects/sleep-model-viz.html" title="Sleep Model Visualization">
-							<img src="images/mobile.png" alt="sketch of mobile" height="500" width="500">
+						<a href="projects/sustainabite.html" title="SustainaBite">
+							<img src="images/apple.png" alt="sustainabite" height="500" width="500">
 						</a>
 						<div class="project-hover">
-							<h3 class="robo-style">Sleep Model Visualization</h3>
-							<p class="noto-sans">Data Analysis: Visualizing Personal Sleep Data</p>
+							<h3 class="robo-style">SustainaBite</h3>
+							<p class="noto-sans">Design Fiction &#38; Case Study</p>
 						</div>
 					</li>
 				</ul>
