--- a/projects/cybersecurity-ransomware.html
+++ b/projects/cybersecurity-ransomware.html
@@ -27,7 +27,7 @@
 			</div> 
 			<nav class="gn-p">
 				<ul class="robo-style">
-					<li><a href="../index.html#projects" title="Projects">Projects</a></li>
+					<li><a href="../projects.html" title="Projects">Projects</a></li>
 					<li><a href="../about.html" title="About Me">About</a></li>
 					<li><a href="../resume/Jiayue_Wong_Resume.pdf" target="_blank" title="Resume">Resume</a></li>
 				</ul>
