--- a/projects/market-visualizer.html
+++ b/projects/market-visualizer.html
@@ -148,7 +148,7 @@
 					<section id="future">
 						<h2>Future Changes</h2>
 						<p>Ideally, any query completed would trigger the map to light up, but due to the constraint of not having enough Arduino digital pins, the user has to choose between a set number of scenarios to query. There were three different scenarios made for users to try and see how this system works. The prototype was designed this way due to time and Arduino constraints. If the system were to be rebuilt to include every combination of possible scenarios (combinations of the cutout pieces), an alternative way to "complete the circuit" and light up the map would need to be used. With the constraints, the prototype used aluminum foil on the backs of the cutout shapes and the board to register and light up the LEDs when a query has been completed. Ideally the user would be able to come up with any scenario and insert pieces based on their ideas.</p>
-						<img src="../images/market-vis/back-of-board.JPG" alt="aluminium circuit" height="388" width="385">
+						<img src="../images/market-vis/back-of-board.jpg" alt="aluminium circuit" height="388" width="385">
 					</section>
                     <hr class="thin">
                     <section id="references">
