--- a/about.html
+++ b/about.html
@@ -36,34 +36,49 @@
 			<section class="about light-pink-lines" id="about">
 				<div class="about-section is-flex">
 					<div class="img-container dark-pink-lines">
-						<img src="images/me-in-a-park.jpg" alt="me in a park" height="500" width="360">
+						<img src="images/me-in-a-park.jpg" alt="me in a park" height="400" width="260">
 					</div>
 					<div class="txt-container noto-sans dark-pink-lines txt-decor">
-						<p>I grew up Victoria captivated by technology, design, psychology, and the interplay between them all.</p>
-						<p>My interest in human computer interactions guided me through a journey of information visualization, creativity, and computer science. As I navigate through my career I am inspired by pioneering accessible technologies that benefit humanity, and the importance of diverse perspectives.</p>
+						<p>I grew up Victoria surrounded by art, technology, and creativity that thrives between them. The blend of natural beauty and innovation around me shaped my curiosity about how people connect with the world and the products they use.<br></p>
+						<p><br>I've always loved helping people come up with solutions to problems. I'm driven by creative collaboration, thoughtful design, and the challenge of turning complex ideas into experiences that feel simple, human, and meaningful.</p>
+					</div>
+				</div>
+				<div class="banner">
+					<h2 class="slider-title noto-sans ">Take a look at some things I've done!</h2>
+					<div class="slider" style="--quantity: 8">
+						<div class="slider-itm" style="--position: 1"><img src="images/slider/masters-tft.png" alt="Hitting masters in TFT set 12 Magic N' Mayhem AUG 2024"></div>			
+						<div class="slider-itm" style="--position: 2"><img src="images/slider/sauna.jpg" alt="Clay Sauna Sprite MAY 2025"></div>
+						<div class="slider-itm" style="--position: 3"><img src="images/slider/dress.jpg" alt="Graduation dress JUN 2020"></div>
+						<div class="slider-itm" style="--position: 4"><img src="images/slider/mush-room.png" alt="Mushroom house MAY 2023"></div>
+						<div class="slider-itm" style="--position: 5"><img src="images/slider/hornet.jpg" alt="Hornet Silksong corchet OCT 2025"></div>
+						<div class="slider-itm" style="--position: 6"><img src="images/slider/dizzy-w-background.gif" alt="Dizzy sploot animation JUN 2024"></div>
+						<div class="slider-itm" style="--position: 7"><img src="images/slider/laundry-bins.png" alt="Laundry bins OCT 2023"></div>
+						<div class="slider-itm" style="--position: 8"><img src="images/slider/dumpster.png" alt="Dumpster OCT 2023"></div>
+					</div>
+					<button class="nav left"><</button>
+					<button class="nav right">></button>
+					<div class="slider-info">
+						<img id="info-image" src="" alt="Item Image">
+						<div id="info-text">
+							<h2>Item Title</h2>
+							<p>Item Description</p>
+						</div>
 					</div>
 				</div>
 				<div class="about-section is-flex reverse">
 					<div class="txt-container noto-sans dark-pink-lines">
-						<p>I've always loved helping people come up with solutions to problems; putting myself in other's shoes has always been very natural to me. Throughout my life I've encountered so many pieces of technology and programs that aren't intuitive and frustrating to use, because of that I want to be able to alleviate all these issues. I like being able to bridge the gap of "don't listen to what users say, listen to what they do".</p>
+						<h4 class="robo-style">Video Games!</h4>
+						<p>Video games have helped shape the person I am today, my relationships, and my aspirations. Every since I was a child, video games have been a constant companion in shaping my interactions with the world and fueling my passion for technology.</p>
+						<h4 class="subheading robo-style">Hobbies and Interests?</h4>
+						<p>As you've seen above, I've dabbled in a variety of arts and crafts ranging from dress making, crocheting, jewelry smithing, painting, 3D modeling, and much more! Although, I wouldn't call myself an expert in any of these departments. I also love fashion, exploring the outdoors, and learning about others' interest! <br><br>Sometime you might find me trying to entice an animal over to pet or at the bouldering gym!</p>
 					</div>
-					<div class="img-container dark-pink-lines">
+					<div class="img-container dark-pink-lines txt-decor-top">
 						<img src="images/me-and-horses.jpg" alt="me with horses" height="500" width="500">
 					</div>
 				</div>
-				<h3 class="robo-style">My Interests</h3>
-				<div class="is-flex interests">
-					<div class="noto-sans">
-						<h4 class="subheading robo-style">Video Games!</h4>
-						<p>Video games are oftentimes seen as a pastime, but to me they have helped shape the person I am today, my relationships, and my aspirations. From the screens of my childhood to the digital landscapes of today, video games have been a constant companion in shaping my interactions with the world and fueling my passion for technology.</p>
-					</div>
-					<div class="noto-sans">
-						<h4 class="subheading robo-style">Crafts!!</h4>
-						<p>I enjoy a variety of arts and crafts. Recently I have been really enjoying my fair share of knitting and crocheting. For the past couple years I have been gifting everyone I know with little crocheted crafts ranging from hats, blankets, and even little headphone accessories. I love hand making gifts for others. Seeing their surprise and appreciation for my gifts fills me with so much warmth!</p>
-					</div>
-				</div>
 			</section>
-			<!--
+
+			<!-- Skills section
 			<section class="skills is-flex" id="skills">
 				<ul class="noto-sans">
 					<li><h3>HCI/UX Skills</h3></li>
@@ -96,14 +111,14 @@
 			<div class="contact">
 				<p>Don't be shy, contact me anytime!</p>
 				<ul>
-					<li><a class="link" href="https://www.linkedin.com/in/jiayue-wong/" title="linkedin" target="_blank"><img src="images/linkedin.svg" alt="linkedin icon" height="25" width="25"> LinkedIn</a></li>
+					<li><a class="link" href="https://www.linkedin.com/in/jiayue-wong" title="linkedin" target="_blank"><img src="images/linkedin.svg" alt="linkedin icon" height="25" width="25"> LinkedIn</a></li>
 					<li><a class="link" href="mailto:jiayue.cw@gmail.com" title="Email me">jiayue.cw@gmail.com</a></li>
 					<li><a class="link" href="https://github.com/cronchyjia" title="github" target="_blank"><img src="images/github.svg" alt="github icon" height="25" width="25"> Github</a></li>
 				</ul>	
 			</div>
 			<img class="orange" src="images/orange.png" alt="orange cut in half" height="300" width="300">
 			<p class="thanks">&#x2661; Thanks for stopping by &#x2661;</p>
-			<p class="copywrite">&copy;2024 - Jiayue Wong : Made with love and fruit</p>
+			<p class="copywrite">&copy;<span id="year"></span> - Jiayue Wong : Made with love and fruit</p>
 			<div class="shape">
 				<img src="images/shape.png" alt="background polygon detail" height="550" width="970">
 			</div>
