--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 			</div>
 			<img class="orange" src="images/orange.png" alt="orange cut in half" height="300" width="300">
 			<p class="thanks">&#x2661; Thanks for stopping by &#x2661;</p>
-			<p class="copywrite">&copy;2024 - Jiayue Wong : Made with love and fruit</p>
+			<p class="copywrite">&copy;<span id="year"></span> - Jiayue Wong : Made with love and fruit</p>
 			<div class="shape">
 				<img src="images/shape.png" alt="background polygon detail" height="550" width="970">
 			</div>
