--- a/projects.html
+++ b/projects.html
@@ -33,20 +33,7 @@
 		</header>
 		<main class="wrapper">
 			<h1 class="title work">Projects</h1>
-			<h2 class="in-progress-head nato-sans">Work in progress...</h2>
-			<section class="work-grid is-flex dark-pink-lines">
-				<div class="work-item-prog">
-					<img src="" alt="" height="" width="">
-	                <h3>Directed Studies: AI Math Tutor</h3>
-	                <p>Product management</p>
-	          	</div>
-	          	<div class="work-item-prog">
-					<img src="" alt="" height="" width="">
-	                <h3>WEST x Fortis BC</h3>
-	                <p>Project management</p>
-				</div>
-	        </section>
-			<h2 class="in-progress-head completed-head nato-sans">Completed</h2>
+			<h2 class="completed-head nato-sans">Some fun things I've done!</h2>
 	        <section class="work-grid is-flex dark-pink-lines">
             	<a class="work-item" href="projects/market-visualizer.html" title="Market Visualizer">
 					<img src="images/globe.png" alt="sketch of a globe" height="300" width="300">
@@ -86,7 +73,7 @@
 			</div>
 			<img class="orange" src="images/orange.png" alt="orange cut in half" height="300" width="300">
 			<p class="thanks">&#x2661; Thanks for stopping by &#x2661;</p>
-			<p class="copywrite">&copy;2024 - Jiayue Wong : Made with love and fruit</p>
+			<p class="copywrite">&copy;<span id="year"></span> - Jiayue Wong : Made with love and fruit</p>
 			<div class="shape">
 				<img src="images/shape.png" alt="background polygon detail" height="550" width="970">
 			</div>
