--- a/projects/sustainabite.html
+++ b/projects/sustainabite.html
@@ -255,8 +255,8 @@
                     <li><a class="link" href="https://github.com/cronchyjia" title="github" target="_blank">Github</a></li>
                 </ul>   
             </div>
-            <p class="thanks-p">&#x2661; Thanks for stoping by &#x2661;</p>
-            <p class="copywrite-p">&copy;2024 - Jiayue Wong : Made with love and fruit</p>
+            <p class="thanks-p">&#x2661; Thanks for stopping by &#x2661;</p>
+            <p class="copywrite-p">&copy;<span id="year"></span> - Jiayue Wong : Made with love and fruit</p>
         </footer>
         <script src="../scripts/main.js"></script>
     </body>
