--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
 						<img src="images/me-in-a-park.jpg" alt="me in a park" height="400" width="260">
 					</div>
 					<div class="txt-container noto-sans dark-pink-lines txt-decor">
-						<p>I grew up Victoria surrounded by art, technology, and creativity that thrives between them. The blend of natural beauty and innovation around me shaped my curiosity about how people connect with the world and the products they use.<br></p>
+						<p>I grew up surrounded by art, technology, and the creativity that exists between them. The blend of natural beauty and innovation around me shaped my curiosity about how people connect with the world and the products they use.<br></p>
 						<p><br>I've always loved helping people come up with solutions to problems. I'm driven by creative collaboration, thoughtful design, and the challenge of turning complex ideas into experiences that feel simple, human, and meaningful.</p>
 					</div>
 				</div>
@@ -126,3 +126,4 @@
 		<script src="scripts/main.js"></script>
 	</body>
 </html>
+
